--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/papontem/33_4_Node_Files_Exercise/issues"
   },
-  "homepage": "https://github.com/papontem/33_4_Node_Files_Exercise#readme"
+  "homepage": "https://github.com/papontem/33_4_Node_Files_Exercise#readme",
+  "dependencies": {
+    "axios": "^1.4.0"
+  }
 }
